--- a/web/login_interface/Login.css
+++ b/web/login_interface/Login.css
@@ -91,7 +91,7 @@
         and (orientation: portrait) {
             .panel {
                 margin-top: 20%;
-                margin-left: 1%;
+                margin-left: -1%;
             }
         }
 
@@ -118,7 +118,7 @@
         and (-webkit-min-device-pixel-ratio: 2) {
             .panel {
                 margin-top: 30%;
-                margin-left: 5%;
+                margin-left: 4%;
                 width: 90%;
             }
         }
@@ -132,7 +132,7 @@
         and (orientation: landscape)
         and (-webkit-min-device-pixel-ratio: 2) {
             .panel {
-                margin-top: 20%;
+                margin-top: 40%;
             }
         }
 
@@ -148,6 +148,18 @@
                 width: 70%;
             }
         }
+
+    /* --- Desktops and Laptops --- */
+
+        /* --- All Orientations --- */
+        @media only screen
+        and (min-device-width: 1200px) {
+            .panel {
+                margin-top: 20%;
+            }
+        }
+
+/* ---------- Styling Rules ---------- */
 
 .full {
     background: url('lake-baikal-9.jpg') no-repeat center center fixed;
